# rexify

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  config.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
dags/: airflow_runner.py
demo/: app.py  requirements.txt
docs/: conf.py  genindex.rst  index.rst  requirements.txt
docs/api/: modules.rst  rexify.cli.rst  rexify.constants.rst  rexify.exceptions.rst  rexify.exceptions.schema.rst  rexify.features.base.rst  rexify.features.dataset.rst  rexify.features.extractor.rst  rexify.features.pipelines.rst  rexify.features.rst  rexify.models.candidate.rst  rexify.models.query.rst  rexify.models.recommender.rst  rexify.models.rst  rexify.models.tower.rst  rexify.pipeline.rst  rexify.rst  rexify.utils.rst
docs/overview/: architecture.md  inputs.md  overview.md
docs/tutorials/: configure_pipeline.ipynb  prebuilt_pipeline.ipynb  quickstart.ipynb  using_demo_app.md
manifests/: pod.yaml  pvc.yaml
notebooks/: run_pipeline.ipynb
rexify/: __init__.py  app.py  cli.py  constants.py  data.py  index.py  lookup.py  main.py  pipeline.py  recommender.py  runner.py  schema.py  tests.py  train.py  types.py  utils.py
rexify/app/: crud.py  dashboard.py  db.py  main.py  models.py  schemas.py
rexify/app/crud/: events.py  features.py  items.py  users.py
rexify/app/db/: base.py  models.py
rexify/app/routers/: events.py  features.py  items.py  models.py  pipelines.py  users.py
rexify/app/routes/: __init__.py  events.py  items.py  models.py  users.py
rexify/components/copy/: component.yaml
rexify/components/download/: component.yaml
rexify/components/index/: component.yaml  task.py
rexify/components/load/: component.yaml  task.py
rexify/components/preprocess/: component.yaml  task.py
rexify/components/rank/: task.py
rexify/components/retrieval/: component.yaml  task.py
rexify/components/train/: component.yaml  task.py
rexify/data/: __init__.py  base.py  data.py  input.py  output.py
rexify/dataclasses/: schema.py
rexify/exceptions/: schema.py
rexify/features/: __init__.py  base.py  cyclical.py  dataset.py  date.py  extractor.py  generator.py  pipelines.py  sequence.py  sequencer.py  timestamp.py  transform.py  transformer.py  transformers.py
rexify/features/date/: date.py  timestamp.py
rexify/features/io/: __init__.py  dataset.py  save.py  schema.py  target.py
rexify/features/transform/: __init__.py  base.py  category.py  custom.py  entity.py  event.py  id.py  main.py  number.py  pipelines.py  rating.py  sequence.py  target.py
rexify/io/: examples.py  models.py
rexify/models/: __init__.py  base.py  base_test.py  candidate.py  candidate_test.py  categorical.py  categorical_test.py  event.py  index.py  lookup.py  lookup_test.py  query.py  query_test.py  ranking.py  recommender.py  recommender_test.py  retrieval.py  scann.py  sequence_test.py  sequential.py  tower.py  tower_test.py
rexify/models/callbacks/: __init__.py  index.py  mlflow.py
rexify/models/embedding/: __init__.py  categorical.py  categorical_test.py  date.py  sequence.py  sequence_test.py
rexify/models/features/: categorical_test.py
rexify/models/ranking/: __init__.py  base.py  event.py  ranking.py
rexify/models/retrieval/: __init__.py  candidate.py  query.py  retrieval.py  tower.py
rexify/pipeline/: __init__.py  __main__.py  pipeline.py  train.py
rexify/pipeline/components/: __init__.py  load.py  preprocess.py  train.py
rexify/pipeline/components/load/: component.yaml  task.py
rexify/pipeline/components/lookup/: __init__.py  component.py  component_test.py  executor.py
rexify/pipeline/components/scann/: component_test.py  executor.py  executor_test.py
rexify/pipeline/components/train/: component.yaml  task.py
rexify/pipeline/lookup/: component.py  component_test.py  executor.py  executor_test.py
rexify/pipeline/scann/: __init__.py  component.py  component_test.py  executor.py  executor_test.py
rexify/pipeline/steps/: __init__.py  preprocess.py  train.py
rexify/pipeline/steps/downloader/: __init__.py  component.py  executor.py
rexify/pipeline/steps/lookup/: executor_test.py
rexify/pipeline/steps/scann/: component_test.py  executor_test.py
scripts/: build.sh  build_docker.sh  build_docs.sh  lint.sh
tests/: test_extractor.py  test_index.py  test_lookup.py  test_lookup_component.py  test_pipeline.py  test_recommender.py  test_schema.py  test_utils.py  utils.py
tests/components/: test_load.py  test_pipeline.py  test_train.py
tests/data/: events.csv  schema.json
tests/features/: test_base.py  test_dataset.py  test_extractor.py  test_pipelines.py
tests/models/: test_candidate.py  test_query.py  test_recommender.py
tests/preprocessing/: test_sequences.py
