[tool.poetry]
name = "rexify"
version = "0.0.0"
description = "Streamlined Recommender System workflows with TensorFlow and Kubeflow"
authors = ["José Medeiros <joseprsm@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://rexify.readthedocs.io"
packages = [{ include = "rexify" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = { version = "^2.6.0", markers = "sys_platform != 'darwin'" }
tensorflow_metal = { version = "^0.5.0", markers = "sys_platform == 'darwin'"}
tensorflow_macos = { version = "^2.6.0", markers = "sys_platform == 'darwin'"}
scann = { version = "^1.2.0", markers = "sys_platform != 'darwin'" }
tensorflow_recommenders = ">=0.7.2"
kfp = "^1.8.0"
scikit-learn = "1.*"
pandas = "^1.4.0"
numpy = ">=1.20.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
darglint = ">=1.8.1"
coverage = {extras = ["toml"], version = ">=6.2"}
interrogate = "^1.5.0"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.darglint]
strictness = "long"

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

[tool.coverage.paths]
source = ["rexify"]

[tool.coverage.run]
branch = true
source = ["rexify"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["if __name__ == .__main__.:", "_cmd"]
omit = ["*/__init__.py"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-module = true
ignore-nested-functions = true
ignore-property-decorators = true
exclude = ["docs", "build", "rexify/pipeline.py", "*/exceptions/*"]
ignore-regex = ["call", "get_config", "compute_loss"]
verbose = 0
omit-covered-files = false
quiet = false
color = false


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
