[metadata]
name = rexify
version = 0.0.1
author = José Medeiros
author_email = joseprsm@gmail.com
description = Easy recommender systems pipelines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joseprsm/rexify
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude = pipeline

[options.entry_points]
console_scripts = rexify=rexify.cli:cli

[coverage:run]
branch = True
source = rexify
omit =
    *_test.py
    test_*
