[metadata]
name = rexify
version = 0.0.1
author = José Medeiros
author_email = joseprsm@gmail.com
description = Easy recommender systems pipelines
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
packages = find:
install_requires =
    tensorflow==2.6.0
    keras=2.6.0
    tensorflow_recommenders==0.6.0
    scikit-learn==1.0.2
    pandas==1.3.3
    numpy==1.19.5
    scann==1.2.3

[options.packages.find]
exclude =
    rexify.pipeline
    rexify.components*
    tests

[coverage:run]
branch = True
source = rexify
omit =
    *_test.py
    test_*
